<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:padding="12dp"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnSpan="2"
        android:layout_gravity="start|fill_horizontal"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="vertical">

            <TextView
                style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

        </LinearLayout>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:src="@drawable/app_icon" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_columnSpan="2"
        android:layout_gravity="start|fill_horizontal"
        android:background="#a7a4a4" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/threshold" />

    <Spinner
        android:id="@+id/spinner_threshold"
        android:layout_width="0dp"
        android:layout_gravity="start|center_vertical|fill_horizontal" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/pages" />

    <Spinner
        android:id="@+id/spinner_pages"
        android:layout_width="0dp"
        android:layout_gravity="start|center_vertical|fill_horizontal" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/items_per_page" />

    <Spinner
        android:id="@+id/spinner_items_per_page"
        android:layout_width="0dp"
        android:layout_gravity="start|center_vertical|fill_horizontal" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/delay_ms" />

    <Spinner
        android:id="@+id/spinner_delay"
        android:layout_width="0dp"
        android:layout_gravity="start|center_vertical|fill_horizontal" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/add_loading_row" />

    <CheckBox
        android:id="@+id/cb_add_loading_row"
        android:layout_gravity="start|center_vertical" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/custom_row" />

    <CheckBox
        android:id="@+id/cb_custom_row"
        android:layout_gravity="start|center_vertical" />

    <!-- RECYCLER ONLY OPTIONS -->

    <TextView
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="start|center_vertical|fill_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:text="@string/recycler_view"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_columnSpan="2"
        android:layout_gravity="start|fill_horizontal"
        android:background="#a7a4a4" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/layout_manager" />

    <Spinner
        android:id="@+id/spinner_layout_mng"
        android:layout_width="0dp"
        android:layout_gravity="start|center_vertical|fill_horizontal" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/orientation" />

    <Spinner
        android:id="@+id/spinner_orientation"
        android:layout_width="0dp"
        android:layout_gravity="start|center_vertical|fill_horizontal" />


    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/reverse" />

    <CheckBox
        android:id="@+id/cb_reverse"
        android:layout_gravity="start|center_vertical" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="start|center_vertical|fill_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:text="@string/abslistview"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_columnSpan="2"
        android:layout_gravity="start|fill_horizontal"
        android:background="#a7a4a4" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/type" />

    <Spinner
        android:id="@+id/spinner_abs_list_type"
        android:layout_width="0dp"
        android:layout_gravity="start|center_vertical|fill_horizontal" />

    <TextView
        android:layout_height="45dp"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:text="@string/header_amp_footer" />

    <CheckBox
        android:id="@+id/cb_header_and_footer"
        android:layout_gravity="start|center_vertical" />

</GridLayout>